# simple_mcp_experiment

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: evaluation.py  frontend_function.py  mcp_execution.py  mcp_list.py  system_prompt_template.py
